# CMake_GTest

./: CMakeLists.txt
include/: Query.cpp  Query.h  QueryResult.h  TextQuery.cpp  TextQuery.h
src/: main.cpp
